--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@distube/spotify": "^0.6.3",
     "axios": "^0.21.4",
     "discord.js": "^13.1.0",
-    "distube@beta": "^3.0.0-beta.38",
+    "distube": "^3.0.0-beta.38",
     "dotenv": "^10.0.0",
     "node": "16.6.1",
     "tweetnacl": "^1.0.3",
