--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "distube": "^3.0.0-beta.38",
     "dotenv": "^10.0.0",
     "node": "16.6.1",
+    "opusscript": "0.0.8",
     "tweetnacl": "^1.0.3",
     "ytdl-core": "^4.9.1"
   }
