--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@distube/soundcloud": "^0.2.2",
     "@distube/spotify": "^0.6.3",
     "axios": "^0.21.4",
+    "cors": "^2.8.5",
     "discord.js": "^13.1.0",
     "distube": "^3.0.0-beta.38",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "node": "16.6.1",
     "opusscript": "0.0.8",
     "pm2": "^5.1.1",
