--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "neliusic",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Discord Bot",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start-pro": "node server.js",
     "start-dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
