--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "distube": "^3.0.0-beta.38",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "ffmpeg": "0.0.4",
     "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
     "node": "16.6.1",
